--- a/blog/templates/blog/allblogs.html
+++ b/blog/templates/blog/allblogs.html
@@ -2,7 +2,6 @@
 <!doctype html>
 <html lang="en">
   <head>
-    {% load staticfiles %}
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
@@ -46,9 +45,9 @@
         <div class="navbar-nav ml-auto">
           <a class="nav-item nav-link " href="https://www.linkedin.com/in/fazlur-rahman-177b41ba/">LinkedIn</a>
           <a class="nav-item nav-link " href="#">Twitter</a>
-          <a class="nav-item nav-link " href="{% static 'resume.pdf'%}">Resume</a>
+          <a class="nav-item nav-link " href="#">Resume</a>
           <a class="nav-item nav-link" href="https://www.facebook.com/fazlur13">Facebook</a>
-          <a class="nav-item nav-link" href="#">Blog</a>
+          <a class="nav-item nav-link  active" href="#">Blog</a>
 
         </div>
       </div>
@@ -56,41 +55,24 @@
 </header>
 
 <main role="main">
+  <div class="container">
 
-  <section class="jumbotron text-center">
-    <div class="container">
-      <h1 class="jumbotron-heading">Hi I'm Fazlur.</h1>
-      <p class="lead text-muted">Welcome to my website created using django and Bootstrap.</p>
-      <p>
-        <a href="mailto:fazlur.rah09@gmail.com" class="btn btn-primary my-2">Email Me.</a>
+  <h1 class="text-center pt-3"> Welcome Fazlurs'Blog!!!</h1>
+  <br />
+  <br />
+  <h2> Latest Posts</h2>
+  <hr />
 
-      </p>
+  {% for blog in blogs.all %}
+  <a href=""><h3>{{blog.title}}</h3></a>
+  {{blog.pub_date_pretty}}
+  <br />
+  <img class="img-fluid" src="{{blog.image.url}}" height="200" width="250"/>
+  <br />
+  {{blog.summary}}
+  {% endfor %}
 
-      <img class="img-fluid" src="{% static 'Fazlur.jpg'%}" height="200" width="250"/>
-    </div>
-  </section>
-
-  <div class="album py-5 bg-light">
-    <div class="container">
-
-      <div class="row">
-        {% for job in job.all %}
-
-        <div class="col-md-4">
-          <div class="card mb-4 shadow-sm">
-            <img class="card-img-top" src="{{ job.image.url}}" </svg>
-            <div class="card-body">
-              <p class="card-text">{{ job.summary }}</p>
-
-            </div>
-          </div>
-        </div>
-
-        {% endfor %}
-      </div>
-    </div>
   </div>
-
 </main>
 
 <footer class="text-muted">
