--- a/job/templates/job/home.html
+++ b/job/templates/job/home.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="Mark Otto, Jacob Thornton, and Bootstrap contributors">
     <meta name="generator" content="Jekyll v3.8.5">
-    <title>Album example · Bootstrap</title>
+    <title>Fazlur's Webpage</title>
 
     <link rel="canonical" href="https://getbootstrap.com/docs/4.3/examples/album/">
 
@@ -38,17 +38,17 @@
   <body>
     <header>
       <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-      <a class="navbar-brand" href="#">Fazlur Rahman</a>
+      <a class="navbar-brand" href="{% url 'home'%}">Fazlur Rahman</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav ml-auto">
           <a class="nav-item nav-link " href="https://www.linkedin.com/in/fazlur-rahman-177b41ba/">LinkedIn</a>
-          <a class="nav-item nav-link " href="#">Twitter</a>
+          <a class="nav-item nav-link " href="https://twitter.com/fazlur4all">Twitter</a>
           <a class="nav-item nav-link " href="{% static 'resume.pdf'%}">Resume</a>
           <a class="nav-item nav-link" href="https://www.facebook.com/fazlur13">Facebook</a>
-          <a class="nav-item nav-link" href="#">Blog</a>
+          <a class="nav-item nav-link" href="{% url 'allblogs' %}">Blog</a>
 
         </div>
       </div>
